upgrade css stack to squash z-index minification bug

--- a/src/js/components/global/header.css
+++ b/src/js/components/global/header.css
@@ -5,13 +5,14 @@
   position: fixed;
   bottom:0;
   left:0;
+  user-select: none;
+  z-index: 10;
   width:100%;
-  user-select:none;
-  z-index:10;
 }
+
 @media (min-width: 768px) {
   .header{
-    z-index:0;
+    z-index:1;
   }
 }
 
